# Clojure-translate

./: #Main.hs#  #backend.clj#  Clojure-translate.cabal  Clojure-translate.cabal~  LICENSE  Main.hs  backend.clj  makedocs  patternmatch.clj  translator_presentation.odp
Clojure/: #CodeGen.hs#  #DeSugar.hs#  #Syntax.hs#  #Translate.hs#  AstTransform.hs  CodeGen.hi  CodeGen.hs  CodeGen.hs~  DeSugar.hs  DeSugar.hs~  ParseHaskell.hs  Syntax.hi  Syntax.hs  Syntax.hs~  Translate.hi  Translate.hs  Translate.hs~  deSugar.hs~
Haskell-backend/: patternmatch.clj
docs/: Clojure-CodeGen.html  Clojure-Syntax.html  Clojure-Translate.html  Main.html  Translator.html  doc-index.html  index-frames.html  index.html  mini_Clojure-CodeGen.html  mini_Clojure-Syntax.html  mini_Clojure-Translate.html  mini_Main.html  mini_Translator.html
tests/: #add.hs.clj#  #comprehensions.hs#  #comprehensions.hs.clj#  #curry_example.hs.clj#  #demo.hs#  #demo.hs.clj#  #map.hs.clj#  #quicksort.hs#  .#addtest.clj  .#comprehensions.hs.clj  .#quicksort.hs  add.hs  add.hs.clj  add.hs.clj~  addtest.clj  compSimple.hs  compSimple.hs.clj  comprehensions.hs.clj  curry_example.hs  curry_example.hs.clj  curry_example.hs.clj~  curryexample.clj  curryexample.clj~  demo.hs  demo.hs.clj  demo.hs.clj~  demo.hs~  dosimple.hs  guardtest.hs  hanoi.hs  hanoi.hs.clj  hello.hs  lambda.hs  lambda.hs.clj  let.hs  lists.hs  lists.hs.clj  map.hs  map.hs.clj  myflip.hs  (+6 more)
