Name: Clojure-translate
Version: 0.0
Description: Translate haskell into clojure
License: GPL
License-file: LICENSE
Author: Daniel Mead
Maintainer: d.w.mead@gmail.com
Build-Type: Simple
Cabal-Version: >=1.2

Executable Clojure-Translate
  Main-is: Main.hs
  Build-Depends: base >= 3, haskell-src-exts >=1.10.2


